--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,11 @@
         <activity android:name=".core.android.ui.MainScreen" />
         <activity android:name=".radioprogram.android.ui.ProgramListScreen" />
         <activity android:name=".radioprogram.android.ui.MaintainProgramScreen" />
-        <activity android:name=".radioprogram.android.ui.ReviewSelectProgramScreen"></activity>
+        <activity android:name=".radioprogram.android.ui.ReviewSelectProgramScreen"/>
+        <activity android:name=".scheduleprogram.android.ui.ReviewSelectScheduleProgramScreen"/>
+        <activity android:name=".scheduleprogram.android.ui.ReviewSelectScheduleProducerPresenterScreen"/>
+        <activity android:name=".scheduleprogram.android.ui.ScheduleListScreen"/>
+        <activity android:name=".scheduleprogram.android.ui.ScheduleScreen"/>
     </application>
 
 </manifest>
