--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
     package="sg.edu.nus.iss.phoenix">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-feature android:name="android.hardware.location.gps" />
 
     <application
@@ -25,8 +26,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
         <activity android:name=".authenticate.android.ui.LoginScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,13 +36,17 @@
         <activity android:name=".core.android.ui.MainScreen" />
         <activity android:name=".radioprogram.android.ui.ProgramListScreen" />
         <activity android:name=".radioprogram.android.ui.MaintainProgramScreen" />
-        <activity android:name=".radioprogram.android.ui.ReviewSelectProgramScreen"/>
-        <activity android:name=".scheduleprogram.android.ui.ReviewSelectProgramScreen"/>
-        <activity android:name=".scheduleprogram.android.ui.ReviewSelectScheduleProducerScreen"/>
-        <activity android:name=".scheduleprogram.android.ui.ScheduleListScreen"/>
-        <activity android:name=".scheduleprogram.android.ui.ScheduleScreen"/>
-        <activity android:name=".scheduleprogram.android.ui.ReviewSelectPresenterScreen"/>
-        <activity android:name=".scheduleprogram.android.ui.ReviewSelectProducerScreen"/>
+        <activity android:name=".radioprogram.android.ui.ReviewSelectProgramScreen" />
+        <activity android:name=".scheduleprogram.android.ui.ReviewSelectProgramScreen" />
+        <activity android:name=".scheduleprogram.android.ui.ReviewSelectScheduleProducerScreen" />
+        <activity android:name=".scheduleprogram.android.ui.ScheduleListScreen" />
+        <activity android:name=".scheduleprogram.android.ui.ScheduleScreen" />
+        <activity android:name=".scheduleprogram.android.ui.ReviewSelectPresenterScreen" />
+        <activity android:name=".scheduleprogram.android.ui.ReviewSelectProducerScreen" />
+        <activity
+            android:name=".scheduleprogram.android.ui.ReviewSelectScheduleProgramScreen"
+            android:label="@string/title_activity_review_select_schedule_program_screen"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
